# xsd-toolkit

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
schemas/: XMLSchema.xsd  xhtml1-strict.xsd
schemas/xmlity-ns/: Cargo.toml
schemas/xmlity-ns-xhtml/: Cargo.toml  build.rs
schemas/xmlity-ns-xhtml/src/: lib.rs
schemas/xmlity-ns-xhtml/tests/: xhtml_test.rs
schemas/xmlity-ns-xml/src/: lib.rs
schemas/xmlity-ns-xs/: Cargo.toml
schemas/xmlity-ns-xs/src/: lib.rs  xs_custom.rs  xs_generated.rs
schemas/xmlity-ns-xs/tests/xhtml_tests/: mod.rs
schemas/xmlity-ns-xs/tests/xs_tests/: mod.rs  top_level_attribute_groups.rs  top_level_complex_type.rs  top_level_element.rs  top_level_group.rs  top_level_simple_type.rs
schemas/xmlity-ns-xsi/: Cargo.toml  build.rs
schemas/xmlity-ns-xsi/src/: lib.rs
schemas/xmlity-ns/src/: lib.rs  list.rs  substitution_group.rs  utils.rs
schemas/xmlity-ns/tests/: substitution_group.rs
xmlity-build/: Cargo.toml
xmlity-build/examples/: xhtml1-strict.rs  xhtml1_strict_generation.rs  xml_generation.rs  xml_schema_generation.rs  xs_generation.rs
xmlity-build/src/: lib.rs
xmlity-build/tests/: testing.rs
xmlity-build/tests/output/: mod.rs
xmlity-ns-xhtml/: Cargo.toml  build.rs
xmlity-ns-xhtml/src/: lib.rs  xhtml.rs  xhtml1_strict.rs
xmlity-ns-xhtml/tests/: xhtml_test.rs
xmlity-ns-xml/: Cargo.toml
xmlity-ns-xml/src/: lib.rs
xmlity-ns-xs/: Cargo.toml
xmlity-ns-xs/src/: lib.rs  xs_generated.rs
xmlity-ns-xs/tests/: xhtml.rs  xs.rs
xmlity-ns-xs/tests/xhtml_tests/: mod.rs
xmlity-ns-xs/tests/xs_tests/: mod.rs  top_level_group.rs  top_level_simple_type.rs
xs_raw/: Cargo.toml
xs_raw/src/: lib.rs  xs_custom.rs
xs_raw/tests/schema/: mod.rs  top_level_attribute_groups.rs  top_level_complex_type.rs  top_level_element.rs  top_level_group.rs  top_level_simple_type.rs
xsd/: Cargo.toml
xsd-builtin/: Cargo.toml
xsd-builtin/src/: facets.rs  lib.rs  other.rs  primitives.rs
xsd-codegen-xmlity/: Cargo.toml
xsd-codegen-xmlity/src/: binds.rs  lib.rs  misc.rs  types.rs
xsd-codegen-xmlity/src/augments/: additional_derives.rs  bon.rs  enum_from.rs  mod.rs  struct_from.rs
xsd-codegen-xmlity/src/complex/: attributes.rs  complex_type.rs  elements.rs  groups.rs  mod.rs
xsd-codegen-xmlity/src/complex_types/: builtin.rs  mod.rs  other.rs
xsd-codegen-xmlity/src/simple/: groups.rs  mod.rs  simple_type.rs
xsd-codegen-xmlity/src/simple/restrictions/: mod.rs  numeric.rs  string.rs
xsd-codegen-xmlity/src/simple_types/: mod.rs
xsd-codegen-xmlity/src/templates/: choice.rs  element_record.rs  group_record.rs  mod.rs  specific_enum.rs  text.rs  value_record.rs  wrapper_struct.rs
xsd-codegen-xmlity/src/top_level/: mod.rs
xsd-codegen-xmlity/tests/: integration.rs  xsd.rs
xsd-codegen-xmlity/tests/examples/: mod.rs  top_level_complex_types.rs  top_level_elements.rs
xsd-codegen-xmlity/tests/specification/: complex_types.rs
xsd-codegen-xmlity/tests/xsd/: mod.rs  top_level_element.rs
xsd-dynamic-query/: Cargo.toml
xsd-dynamic-query/src/: lib.rs
xsd-fragment-transformer/: Cargo.toml
xsd-fragment-transformer/src/: lib.rs
xsd-fragment-transformer/src/complex/: expand_attribute_declarations.rs  expand_extension_fragments.rs  expand_groups.rs  expand_restriction_fragments.rs  expand_short_form_complex_types.rs  flatten_nested_groups.rs  remove_prohibited_attributes.rs  single_choice_to_sequence.rs
xsd-fragment-transformer/src/simple/: expand_restriction.rs  flatten_nested_groups.rs
xsd-fragments/: Cargo.toml
xsd-fragments-transformer/: Cargo.toml
xsd-fragments-transformer/src/: lib.rs
xsd-fragments-transformer/src/complex/: expand_attribute_declarations.rs  expand_extension_fragments.rs  expand_groups.rs  expand_restriction_fragments.rs  expand_short_form_complex_types.rs  flatten_nested_groups.rs  mod.rs  remove_prohibited_attributes.rs  single_choice_to_sequence.rs
xsd-fragments-transformer/src/simple/: expand_restriction.rs  flatten_nested_groups.rs  mod.rs
xsd-fragments/src/: lib.rs
xsd-fragments/src/fragments/: complex.rs  mod.rs  simple.rs
xsd-namespace-map/: Cargo.toml
xsd-namespace-map/src/: lib.rs  map.rs
xsd-namespace-map/src/resolvers/: cache.rs  chain.rs  mod.rs  reqwest.rs  std_fs.rs  tokio_fs.rs
xsd-namespace-map/tests/: reqwest.rs
xsd-simple-type-compiler/: Cargo.toml  README.md
xsd-simple-type-compiler/src/: lib.rs
xsd-type-compiler/: Cargo.toml
xsd-type-compiler/src/: lib.rs  misc.rs  transformers.rs
xsd-type-compiler/src/complex/: mod.rs
xsd-type-compiler/src/complex/transformers/: expand_attribute_declarations.rs  expand_attribute_groups.rs  expand_based_fragments.rs  expand_extension_fragments.rs  expand_groups.rs  expand_restriction_fragments.rs  expand_short_form_complex_types.rs  flatten_nested_groups.rs  mod.rs  remove_prohibited_attributes.rs  single_choice_to_sequence.rs
xsd-type-compiler/src/fragments/: complex.rs  mod.rs  transformers.rs
xsd-type-compiler/src/fragments/complex/: mod.rs
xsd-type-compiler/src/fragments/complex/transformers/: expand_attribute_declarations.rs  expand_extension_fragments.rs  expand_groups.rs  expand_restriction_fragments.rs  expand_short_form_complex_types.rs  flatten_nested_groups.rs  remove_prohibited_attributes.rs  single_choice_to_sequence.rs
xsd-type-compiler/src/fragments/simple/: mod.rs
xsd-type-compiler/src/fragments/simple/transformers/: expand_restriction.rs  flatten_nested_groups.rs  flatten_restriction.rs  mod.rs
xsd-type-compiler/src/simple/: mod.rs
xsd-type-compiler/src/simple/transformers/: flatten_nested_groups.rs  mod.rs
xsd-xmlity/: Cargo.toml  backto.xml
xsd-xmlity/src/: lib.rs  schema.rs
xsd-xmlity/tests/: xsd.rs
xsd/src/: builtin.rs  lib.rs  old_schema.rs  schema.rs  schema_names.rs  xs_custom.rs  xs_generated.rs  xsn.rs
xsd/tests/: xml_schema.rs  xmlity.rs
xsd/tests/schema/: mod.rs  top_level_attribute_groups.rs  top_level_complex_type.rs  top_level_element.rs  top_level_group.rs  top_level_simple_type.rs
xsd/tests/xhtml/: mod.rs  top_level_element.rs
