[workspace]
resolver = "2"
members = [
  "xsd",
  "xsd-codegen-xmlity",
  "xsd-type-compiler",
  "xmlity-build",
  # "xs_raw",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.82.0"
authors = ["Lukas Friman <lukas@dreamplay.net>"]
repository = "https://github.com/lukasfri/xsd-toolkit"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
thiserror = "^2.0.4"
pretty_assertions = "^1.4.1"
rstest = "^0.25.0"
xmlity = { version = "0.0.7", features = [
  "derive",
], git = "https://github.com/lukasfri/xmlity.git", rev = "7c0e7c4eaf685af03d40bce42c53e4984b9a1cf3" }
xmlity-quick-xml = { version = "0.0.7", git = "https://github.com/lukasfri/xmlity.git", rev = "7c0e7c4eaf685af03d40bce42c53e4984b9a1cf3" }
ntest = "0.9.3"
