[workspace]
resolver = "2"
members = [
  "xsd",
  "xsd-codegen-xmlity",
  "xsd-type-compiler",
  "xmlity-build",
  "schemas/xmlity-ns-xhtml",
  "schemas/xmlity-ns-xs",
  "schemas/xmlity-ns-xsi",
  "schemas/xmlity-ns-xml",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.82.0"
authors = ["Lukas Friman <lukas@dreamplay.net>"]
repository = "https://github.com/lukasfri/xsd-toolkit"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
xmlity-ns-xhtml = { path = "schemas/xmlity-ns-xhtml" }
xmlity-ns-xs = { path = "schemas/xmlity-ns-xs" }
xmlity-ns-xsi = { path = "schemas/xmlity-ns-xsi" }
xmlity-ns-xml = { path = "schemas/xmlity-ns-xml" }
thiserror = "^2.0.4"
pretty_assertions = "^1.4.1"
rstest = "^0.25.0"
xmlity = { version = "0.0.7", features = [
  "derive",
], git = "https://github.com/lukasfri/xmlity.git", rev = "eb692a7088e7b999b78364e44a82b0686b1decee" }
xmlity-quick-xml = { version = "0.0.7", git = "https://github.com/lukasfri/xmlity.git", rev = "eb692a7088e7b999b78364e44a82b0686b1decee" }
ntest = "0.9.3"
