[workspace]
resolver = "2"
members = [
  "xsd",
  "xsd-codegen-xmlity",
  "xsd-fragments",
  "xsd-fragments-transformer",
  "xmlity-build",
  "schemas/xmlity-ns-xhtml",
  "schemas/xmlity-ns-xs",
  "schemas/xmlity-ns-xsi",
  "schemas/xmlity-ns-xml",
  "xsd-dynamic-query",
  "xsd-builtin",
  "xsd-namespace-map",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.82.0"
authors = ["Lukas Friman <lukas@dreamplay.net>"]
repository = "https://github.com/lukasfri/xsd-toolkit"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
xmlity-ns-xhtml = { path = "schemas/xmlity-ns-xhtml" }
xmlity-ns-xs = { path = "schemas/xmlity-ns-xs" }
xmlity-ns-xsi = { path = "schemas/xmlity-ns-xsi" }
xmlity-ns-xml = { path = "schemas/xmlity-ns-xml" }
thiserror = "^2.0.4"
pretty_assertions = "^1.4.1"
rstest = "^0.25.0"
xmlity = { version = "0.0.7", features = [
  "derive",
], git = "https://github.com/lukasfri/xmlity.git", rev = "e17d2e961099202251946e40b7a48b706fb5c029" }
xmlity-quick-xml = { version = "0.0.7", git = "https://github.com/lukasfri/xmlity.git", rev = "e17d2e961099202251946e40b7a48b706fb5c029" }
ntest = "0.9.3"
