[package]
name = "xs_raw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
bon = "3.6.3"
xmlity.workspace = true
xmlity-quick-xml.workspace = true
derive_more = { version = "2.0.1", features = ["full"] }

[dev-dependencies]
rstest.workspace = true
pretty_assertions.workspace = true
ntest.workspace = true
