[package]
name = "xsd-fragments"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
syn = { version = "2.0.29", features = ["full"] }
xsd = { path = "../xsd" }
thiserror.workspace = true
xmlity.workspace = true
xsd-namespace-map = { path = "../xsd-namespace-map" }

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
# xsd-xmlity = { path = "../xsd-xmlity" }
xmlity-quick-xml.workspace = true
insta = { version = "1.31.0", features = [] }
map-macro = "0.3.0"
