[package]
name = "xsd-namespace-map"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
syn = { version = "2.0.29", features = ["full"] }
xsd = { path = "../xsd" }
thiserror.workspace = true
xmlity.workspace = true
url = { version = "2.5.4" }
reqwest = { version = "0.12.22", features = ["blocking"] }
xmlity-quick-xml.workspace = true
sha3 = "0.11.0-rc.0"
glob = "0.3.2"
tokio = { version = "1.46.1", features = ["fs"] }
derive_more = "2.0.1"

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
# xsd-xmlity = { path = "../xsd-xmlity" }
xmlity-quick-xml.workspace = true
insta = { version = "1.31.0", features = [] }
map-macro = "0.3.0"
tokio = { version = "1.46.1", features = ["full"] }
