[package]
name = "xsd-simple-type-compiler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
syn = { version = "2.0.29", features = ["full"] }
xsd = { path = "../xsd" }
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
xsd-xmlity = { path = "../xsd-xmlity" }
xmlity-quick-xml = { version = "0.0.1", git = "https://github.com/lukasfri/xmlity.git", rev = "b6fe256ad89c51d45bca4a70869dd9dfe4a4123d" }
insta = { version = "1.31.0", features = [] }
