[package]
name = "xsd-xmlity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]

[dependencies]
xsd = { path = "../xsd" }
xmlity.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true
xmlity-quick-xml.workspace = true
