[package]
name = "xsd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
xmlity.workspace = true
xmlity-quick-xml.workspace = true
bon = "3.6.3"

[dev-dependencies]
rstest.workspace = true
